add storage google for save it query Selector for field email and password and button ids

--- a/popup.html
+++ b/popup.html
@@ -22,12 +22,12 @@
   <!-- Login section -->
   <div class="login-section">
     <h4>Save Input IDs</h4>
-    <input type="email" id="emailInput" placeholder="Email ID" />
-    <input type="password" id="passwordInput" placeholder="Password ID" />
-    <input type="text" id="connectInput" placeholder="Connect Button ID" />
+    <input type="email" id="emailInput" placeholder="Email Query Selector" />
+    <input type="text" id="passwordInput" placeholder="Password Query Selector" />
+    <input type="text" id="connectInput" placeholder="Connect Button Query Selector" />
     <button id="saveButton">Save Settings</button>
   </div>
-  
+
   <script src="popup.js"></script>
 </body>
 
